--- a/BE-COM/EntitiesLayer/EntitiesLayer.csproj
+++ b/BE-COM/EntitiesLayer/EntitiesLayer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rol.cs" />
+    <Compile Include="TipoBeca.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Validaciones.cs" />
   </ItemGroup>
