--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -132,6 +132,12 @@
     <Compile Include="FrmRegistrarRol.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmRegistrarTipoBeca.Designer.vb">
+      <DependentUpon>FrmRegistrarTipoBeca.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistrarTipoBeca.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistrarUsuario.Designer.vb">
       <DependentUpon>FrmRegistrarUsuario.vb</DependentUpon>
     </Compile>
@@ -200,6 +206,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarRol.resx">
       <DependentUpon>FrmRegistrarRol.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarTipoBeca.resx">
+      <DependentUpon>FrmRegistrarTipoBeca.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarUsuario.resx">
       <DependentUpon>FrmRegistrarUsuario.vb</DependentUpon>
