registro de beneficios sin iu

--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -46,6 +46,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
@@ -108,6 +109,12 @@
     <Compile Include="FrmMostrarHistorialAcademico.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmMostrarBeneficios.Designer.vb">
+      <DependentUpon>FrmMostrarBeneficios.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMostrarBeneficios.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmMostrarRoles.Designer.vb">
       <DependentUpon>FrmMostrarRoles.vb</DependentUpon>
     </Compile>
@@ -124,6 +131,12 @@
       <DependentUpon>FrmPantallaPrincipal.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmPantallaPrincipal.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistrarBeneficio.Designer.vb">
+      <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistrarBeneficio.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmRegistrarRol.Designer.vb">
@@ -186,8 +199,14 @@
     <EmbeddedResource Include="FrmMantenimientoUsuarios.resx">
       <DependentUpon>FrmMantenimientoUsuarios.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmMostrarCarreras.resx">
+      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarHistorialAcademico.resx">
       <DependentUpon>FrmMostrarHistorialAcademico.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMostrarBeneficios.resx">
+      <DependentUpon>FrmMostrarBeneficios.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarRoles.resx">
       <DependentUpon>FrmMostrarRoles.vb</DependentUpon>
@@ -197,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPantallaPrincipal.resx">
       <DependentUpon>FrmPantallaPrincipal.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarBeneficio.resx">
+      <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarRol.resx">
       <DependentUpon>FrmRegistrarRol.vb</DependentUpon>
