--- a/BE-COM/EntitiesLayer/EntitiesLayer.csproj
+++ b/BE-COM/EntitiesLayer/EntitiesLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Beneficio.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
