--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="FrmMostrarRoles.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmModificarPeriodo.Designer.vb">
+      <DependentUpon>FrmModificarPeriodo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmModificarPeriodo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistrarPeriodo.Designer.vb">
       <DependentUpon>FrmRegistrarPeriodo.vb</DependentUpon>
     </Compile>
@@ -188,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarRoles.resx">
       <DependentUpon>FrmMostrarRoles.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmModificarPeriodo.resx">
+      <DependentUpon>FrmModificarPeriodo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarPeriodo.resx">
       <DependentUpon>FrmRegistrarPeriodo.vb</DependentUpon>
