--- a/BE-COM/DAL/DAL.csproj
+++ b/BE-COM/DAL/DAL.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="DBAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BeneficioRepository.cs" />
     <Compile Include="Repositories\CarreraRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PermisoRepository.cs" />
     <Compile Include="Repositories\RolRepository.cs" />
     <Compile Include="Repositories\PeriodoRepository.cs" />
+    <Compile Include="Repositories\TipoBecaRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup />
