--- a/BE-COM/EntitiesLayer/EntitiesLayer.csproj
+++ b/BE-COM/EntitiesLayer/EntitiesLayer.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Beneficio.cs" />
     <Compile Include="Carrera.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Periodo.cs" />
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rol.cs" />
+    <Compile Include="TipoBeca.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Validaciones.cs" />
   </ItemGroup>
