--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -114,6 +114,12 @@
     <Compile Include="FrmModificarPeriodo.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmRegistrarCarrera.Designer.vb">
+      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistrarCarrera.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistrarPeriodo.Designer.vb">
       <DependentUpon>FrmRegistrarPeriodo.vb</DependentUpon>
     </Compile>
@@ -197,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarPeriodo.resx">
       <DependentUpon>FrmModificarPeriodo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarCarrera.resx">
+      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarPeriodo.resx">
       <DependentUpon>FrmRegistrarPeriodo.vb</DependentUpon>
