--- a/BE-COM/BLL/BLL.csproj
+++ b/BE-COM/BLL/BLL.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GestorBeneficio.cs" />
+    <Compile Include="GestorRequisito.cs" /> 
+   <Compile Include="GestorBeneficio.cs" />
+    <Compile Include="GestorBitacoraTransaccion.cs" /> 
     <Compile Include="GestorCarrera.cs" />
     <Compile Include="GestorPeriodo.cs" />
     <Compile Include="GestorTipoBeca.cs" />
