--- a/BE-COM/DAL/DAL.csproj
+++ b/BE-COM/DAL/DAL.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,9 +45,11 @@
     <Compile Include="DBAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BeneficioRepository.cs" />
+    <Compile Include="Repositories\BitacoraTransaccionRepository.cs" />
     <Compile Include="Repositories\CarreraRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PermisoRepository.cs" />
+    <Compile Include="Repositories\RequisitoRepository.cs" />
     <Compile Include="Repositories\RolRepository.cs" />
     <Compile Include="Repositories\PeriodoRepository.cs" />
     <Compile Include="Repositories\TipoBecaRepository.cs" />
