--- a/BE-COM/EntitiesLayer/EntitiesLayer.csproj
+++ b/BE-COM/EntitiesLayer/EntitiesLayer.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beneficio.cs" />
+    <Compile Include="BitacoraTransaccion.cs" />
     <Compile Include="Carrera.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Periodo.cs" />
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requisito.cs" />
     <Compile Include="Rol.cs" />
     <Compile Include="TipoBeca.cs" />
     <Compile Include="Usuario.cs" />
