--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -46,13 +46,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-    <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -114,6 +111,12 @@
     <Compile Include="FrmModificarPeriodo.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmRegistrarBeneficio.Designer.vb">
+      <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistrarBeneficio.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistrarCarrera.Designer.vb">
       <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
     </Compile>
@@ -136,6 +139,12 @@
       <DependentUpon>FrmPantallaPrincipal.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmPantallaPrincipal.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistrarRequisito.Designer.vb">
+      <DependentUpon>FrmRegistrarRequisito.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistrarRequisito.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmRegistrarRol.Designer.vb">
@@ -192,17 +201,26 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FrmAcademico.resx">
+      <DependentUpon>FrmAcademico.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmIniciarSesion.resx">
       <DependentUpon>FrmIniciarSesion.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMantenimientoUsuarios.resx">
       <DependentUpon>FrmMantenimientoUsuarios.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmMostrarCarreras.resx">
+      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarRoles.resx">
       <DependentUpon>FrmMostrarRoles.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarPeriodo.resx">
       <DependentUpon>FrmModificarPeriodo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarBeneficio.resx">
+      <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarCarrera.resx">
       <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
@@ -215,6 +233,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPantallaPrincipal.resx">
       <DependentUpon>FrmPantallaPrincipal.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarRequisito.resx">
+      <DependentUpon>FrmRegistrarRequisito.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarRol.resx">
       <DependentUpon>FrmRegistrarRol.vb</DependentUpon>
