--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -93,6 +93,12 @@
     <Compile Include="FrmMantenimientoUsuarios.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmModificarRol.Designer.vb">
+      <DependentUpon>FrmModificarRol.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmModificarRol.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmMostrarCarreras.Designer.vb">
       <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
     </Compile>
@@ -209,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMantenimientoUsuarios.resx">
       <DependentUpon>FrmMantenimientoUsuarios.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmModificarRol.resx">
+      <DependentUpon>FrmModificarRol.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarCarreras.resx">
       <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
