--- a/BE-COM/DAL/DAL.csproj
+++ b/BE-COM/DAL/DAL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PermisoRepository.cs" />
     <Compile Include="Repositories\RequisitoRepository.cs" />
+    <Compile Include="Repositories\UsuarioRepository.cs" />
     <Compile Include="Repositories\RolRepository.cs" />
     <Compile Include="Repositories\PeriodoRepository.cs" />
     <Compile Include="Repositories\TipoBecaRepository.cs" />
