--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -111,6 +111,12 @@
     <Compile Include="FrmModificarPeriodo.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmMostrarTiposDeBeca.Designer.vb">
+      <DependentUpon>FrmMostrarTiposDeBeca.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMostrarTiposDeBeca.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistrarBeneficio.Designer.vb">
       <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
     </Compile>
@@ -218,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarPeriodo.resx">
       <DependentUpon>FrmModificarPeriodo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMostrarTiposDeBeca.resx">
+      <DependentUpon>FrmMostrarTiposDeBeca.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarBeneficio.resx">
       <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
