--- a/BE-COM/BLL/BLL.csproj
+++ b/BE-COM/BLL/BLL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GestorCarrera.cs" />
+    <Compile Include="GestorCurso.cs" />
     <Compile Include="GestorUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
