--- a/BE-COM/DAL/DAL.csproj
+++ b/BE-COM/DAL/DAL.csproj
@@ -44,7 +44,9 @@
     <Compile Include="DBAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CarreraRepository.cs" />
+    <Compile Include="Repositories\CursoRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IUser.cs" />
     <Compile Include="Repositories\PermisoRepository.cs" />
     <Compile Include="Repositories\RolRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
