--- a/BE-COM/EntitiesLayer/EntitiesLayer.csproj
+++ b/BE-COM/EntitiesLayer/EntitiesLayer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Carrera.cs" />
+    <Compile Include="Curso.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
