--- a/BE-COM/UI/UI.vbproj
+++ b/BE-COM/UI/UI.vbproj
@@ -81,8 +81,6 @@
     <Compile Include="FrmAcademico.vb">
       <SubType>Form</SubType>
     </Compile>
-<<<<<<< HEAD
-=======
     <Compile Include="FrmInformacionCarrera.Designer.vb">
       <DependentUpon>FrmInformacionCarrera.vb</DependentUpon>
     </Compile>
@@ -93,6 +91,12 @@
       <DependentUpon>FrmAsociarCursoCarrera.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmAsociarCursoCarrera.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMostrarCarreras.designer.vb">
+      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMostrarCarreras.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMostrarCursosPorCarrera.Designer.vb">
@@ -107,12 +111,6 @@
     <Compile Include="FrmMostrarCurso.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmMostrarCarreras.Designer.vb">
-      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmMostrarCarreras.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="FrmModificarCarrera.Designer.vb">
       <DependentUpon>FrmModificarCarrera.vb</DependentUpon>
     </Compile>
@@ -125,19 +123,21 @@
     <Compile Include="FrmModificarCurso.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FrmRegistrarCarrera.Designer.vb" />
+    <Compile Include="FrmRegistrarCarrera.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistrarCarrera1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FrmRegistrarCarrera.resx</DependentUpon>
+    </Compile>
     <Compile Include="FrmRegistrarCurso.Designer.vb">
       <DependentUpon>FrmRegistrarCurso.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmRegistrarCurso.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmRegistrarCarrera.Designer.vb">
-      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmRegistrarCarrera.vb">
-      <SubType>Form</SubType>
-    </Compile>
->>>>>>> BECOMM
     <Compile Include="FrmIniciarSesion.Designer.vb">
       <DependentUpon>FrmIniciarSesion.vb</DependentUpon>
     </Compile>
@@ -148,12 +148,6 @@
       <DependentUpon>FrmMantenimientoUsuarios.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmMantenimientoUsuarios.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmMostrarCarreras.Designer.vb">
-      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmMostrarCarreras.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMostrarRoles.Designer.vb">
@@ -172,12 +166,6 @@
       <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
     </Compile>
     <Compile Include="FrmRegistrarBeneficio.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmRegistrarCarrera.Designer.vb">
-      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmRegistrarCarrera.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmRegistrarPeriodo.Designer.vb">
@@ -279,13 +267,14 @@
     <EmbeddedResource Include="FrmAcademico.resx">
       <DependentUpon>FrmAcademico.vb</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
-=======
     <EmbeddedResource Include="FrmInformacionCarrera.resx">
       <DependentUpon>FrmInformacionCarrera.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAsociarCursoCarrera.resx">
       <DependentUpon>FrmAsociarCursoCarrera.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMostrarCarreras.resx">
+      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarCursosPorCarrera.resx">
       <DependentUpon>FrmMostrarCursosPorCarrera.vb</DependentUpon>
@@ -293,30 +282,24 @@
     <EmbeddedResource Include="FrmMostrarCurso.resx">
       <DependentUpon>FrmMostrarCurso.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmMostrarCarreras.resx">
-      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarCarrera.resx">
       <DependentUpon>FrmModificarCarrera.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmModificarCurso.resx">
       <DependentUpon>FrmModificarCurso.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarCarrera.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>FrmRegistrarCarrera1.Designer.vb</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarCurso.resx">
       <DependentUpon>FrmRegistrarCurso.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmRegistrarCarrera.resx">
-      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
-    </EmbeddedResource>
->>>>>>> BECOMM
     <EmbeddedResource Include="FrmIniciarSesion.resx">
       <DependentUpon>FrmIniciarSesion.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMantenimientoUsuarios.resx">
       <DependentUpon>FrmMantenimientoUsuarios.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmMostrarCarreras.resx">
-      <DependentUpon>FrmMostrarCarreras.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMostrarRoles.resx">
       <DependentUpon>FrmMostrarRoles.vb</DependentUpon>
@@ -326,9 +309,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarBeneficio.resx">
       <DependentUpon>FrmRegistrarBeneficio.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmRegistrarCarrera.resx">
-      <DependentUpon>FrmRegistrarCarrera.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarPeriodo.resx">
       <DependentUpon>FrmRegistrarPeriodo.vb</DependentUpon>
