--- a/BE-COM/DAL/DAL.csproj
+++ b/BE-COM/DAL/DAL.csproj
@@ -33,9 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Transactions" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,23 +45,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BeneficioRepository.cs" />
     <Compile Include="Repositories\BitacoraTransaccionRepository.cs" />
-    <Compile Include="Repositories\CarreraRepository.cs" />
-<<<<<<< HEAD
-    <Compile Include="Repositories\IUsers.cs" />
-    <Compile Include="Repositories\BitacoraErrorRepository.cs" />
-    <Compile Include="CorreoRepository.cs" />
-=======
-    <Compile Include="Repositories\CursoRepository.cs" />
->>>>>>> New
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\IUser.cs" />
-    <Compile Include="Repositories\PermisoRepository.cs" />
     <Compile Include="Repositories\RequisitoRepository.cs" />
-    <Compile Include="Repositories\UsuarioRepository.cs" />
-    <Compile Include="Repositories\RolRepository.cs" />
-    <Compile Include="Repositories\PeriodoRepository.cs" />
-    <Compile Include="Repositories\TipoBecaRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Accessibility">
+      <Guid>{1EA4DBF0-3C3B-11CF-810C-00AA00389B71}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>1</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj">
