--- a/BE-COM/UI/App.config
+++ b/BE-COM/UI/App.config
@@ -1,19 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Beca"
-<<<<<<< HEAD
-        connectionString="Data Source=DOUGLAS-PC\MSSQLSERVER2014;Initial Catalog=BDBeca;Integrated Security=True"
-=======
-        connectionString="Data Source=MAURICIOARAICA;Initial Catalog=BDBeca;Integrated Security=True"
->>>>>>> New
-        providerName="System.Data.SqlClient" />
+    <add name="Beca" connectionString="Data Source=DANIPC;Initial Catalog=BDBeca;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
 </configuration>
-
-<!--Source=DOUGLAS-PC\MSSQLSERVER2014;Initial Catalog=BDBeca;Integrated Security=True--> 
+<!--Source=DOUGLAS-PC\MSSQLSERVER2014;Initial Catalog=BDBeca;Integrated Security=True-->
